<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="100dp">



 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/question"
     android:textSize="10pt"
     android:layout_centerHorizontal="true"
     android:textColor="@android:color/black"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:id="@+id/cancel_delete"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/delete_subject"
        android:layout_marginRight="10dp"/>



</RelativeLayout>

