<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="140dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:text="@string/edit_grade"
            android:textSize="8pt"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/darker_gray" />


    </RelativeLayout>

    <EditText
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/style_dialog"
        android:padding="2dp"
        android:textSize="10pt"
        android:id="@+id/grade_value"
        android:inputType="textCapSentences|textMultiLine"
        />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:id="@+id/cancel_edit"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/edit_grade"
        android:layout_marginRight="10dp"/>



</RelativeLayout>

