<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@drawable/img">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/subject"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/txtSubject"
            android:layout_marginStart="20dp"
            android:textColor="@android:color/black"
            android:background="@color/yellow"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/item"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/txtItem"
            android:layout_marginStart="20dp"
            android:textColor="@android:color/black"
            android:background="@color/blue"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:id="@+id/txtCancel"
            android:background="@color/orange"
            android:textColor="@android:color/black"
            android:layout_marginEnd="10dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/ok"
            android:id="@+id/txtOK"
            android:background="@color/orange"
            android:textColor="@android:color/black"
            android:layout_marginStart="10dp"
            android:gravity="center"/>

    </LinearLayout>


</LinearLayout>