<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="250dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/subject_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:text="@string/subject_name"
            android:textSize="8pt"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/darker_gray" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view_choose_subjects"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:scrollbars="vertical"
        android:layout_below="@id/recycle_view_choose_subjects">

    </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:id="@+id/cancel_subject"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/choose_subject"
        android:layout_marginRight="10dp"/>


    </RelativeLayout>

</RelativeLayout>

