<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="1280"
    tools:context=".Activities.SubjectActivity"
    android:background="@drawable/img">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/subject"
            android:textColor="@android:color/black"
            android:textSize="10pt"
            android:layout_marginTop="20dp"/>

        <View
            android:layout_width="2dp"
            android:layout_height="450dp"
            android:layout_marginLeft="110dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:text="@string/grades"
            android:textColor="@android:color/black"
            android:textSize="10pt"
            android:layout_marginTop="20dp"
            android:id="@+id/grades"/>

        <View
            android:layout_width="2dp"
            android:layout_height="450dp"
            android:layout_marginLeft="230dp"
            android:background="#000000"
            android:id="@+id/vertical_line"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:text="@string/final_grade"
            android:textColor="@android:color/black"
            android:textSize="10pt"
            android:layout_marginTop="20dp"
            android:id="@+id/final_grade"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000"
            android:layout_below="@+id/final_grade"
            android:id="@+id/first_horizontal"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@+id/first_horizontal"
            android:id="@+id/recycler_view"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000"
            android:layout_below="@+id/vertical_line"
            android:id="@+id/horizontal_line"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60dp"
            android:textSize="10pt"
            android:textStyle="bold"
            android:text="@string/average_rating"
            android:textColor="@android:color/holo_red_dark"
            android:layout_below="@+id/horizontal_line"
            android:id="@+id/average_rating"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:textSize="10pt"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_below="@+id/horizontal_line"
            android:id="@+id/average_rating_value"/>

    </RelativeLayout>

</LinearLayout>